--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,15 +16,20 @@ jobs:
 
       - name: Setup Node
         uses: actions/setup-node@v3
+        with:
+          node-version: 18  # Set Node.js version
 
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: npm install
 
       - name: Build project
         run: npm run build
 
+      - name: Debug Build Output
+        run: ls -l ./dist  # Check if the build directory exists
+
       - name: Upload production-ready build files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: production-files
           path: ./dist
@@ -36,11 +41,17 @@ jobs:
     if: github.ref == 'refs/heads/master'
 
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: production-files
           path: ./dist
+
+      - name: Debug Downloaded Artifact
+        run: ls -l ./dist  # Ensure the downloaded artifact exists
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
